# insights_generator

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/: insights_prompts.yaml
src/insights_generator/: __init__.py  api.py  config.py  graph.py  io_utils.py  model_router.py  models.py  prompting.py  session_store.py  state.py
src/insights_generator/agents/: __init__.py  analytics_agent.py  insight_agent.py  intent_agent.py  visualization_agent.py
src/insights_generator/templates/: __init__.py  chart_templates.py
tests/: test_factory.py  test_openai_client.py
tests/unit/: test_agent.py  test_mcp.py  test_planner.py
